# gclient

./: CMakeLists.txt  DEVELOPMENT  INSTALL  README.md  config.h.in
client/: CMakeLists.txt  gclient.c
cmake/: CheckCmakeCompat.cmake  ConfigOptions.cmake  Find.cmake  FindFeature.cmake
cmake/compat_2.8.2/: FindPkgConfig.cmake
cmake/compat_2.8.6/: FeatureSummary.cmake
core/: CMakeLists.txt  gtk.c
include/: CMakeLists.txt  common.h  debug.h  gclient.h  package.h  widget.h
include/core/: core.h  gtk.h
include/utils/: i18n.h  parser.h
include/widgets/: widget.h
resources/: CMakeLists.txt
resources/ld/: gclient.conf
resources/locale/zh_CN/: desktop.in  messages.po  test.in
resources/xml/: dialog.xml  window.xml
tests/gtk/: Makefile  test_button.c  test_check_menu.c  test_checkbox.c  test_combobox.c  test_dialog_about.c  test_dialog_colorselect.c  test_dialog_fontselect.c  test_dialog_msg.c  test_drag_drop.c  test_entry.c  test_fixed.c  test_frame.c  test_h_separator.c  test_icon.c  test_icon_view.c  test_label.c  test_label_markup.c  test_line_column.c  test_listview_simple.c  test_menu.c  test_menus.c  test_move.c  test_search_highlight.c  test_statusbar.c  test_textview.c  test_timer.c  test_toolbar.c  test_vbox.c  test_widget.c  test_window.c
tests/i18n/: Makefile  test1.c  test1.mo  test1.po
tests/i18n/locale/zh_CN/LC_MESSAGES/: test1.mo
tests/tutorial-gtk/: Makefile  helloworld  new-helloworld
tests/xml/: Makefile  test1.xml  test2.xml  test_parse  test_parse.c
utils/: CMakeLists.txt  i18n.c  window.xml  xml.c
widgets/: CMakeLists.txt  widget.c
